<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Productversion="">
  <GVL Name="AnalyticsHMI" Id="25923690-a01b-44c6-8a41-1816169b5922">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	//Switch between historical and live data
	stHMI_DataSourceCtrl: ST_HMI_DataSourceCtrl;
	stHMI_DataSourceConfig: ARRAY [0..0] OF ST_HMI_DataSourceConfig := [ 
																	( nID:= 1, sDisplayName:= "Configuration 1", eConfigType:= E_SourceType.eLive, 
																		aInputSources:= [ 
																			( nID:= 1, sDisplayName:= "eb302cb9-e487-ea1a-e3f6-37158585fde7", sStreamSystemID:= STRING_TO_GUID('eb302cb9-e487-ea1a-e3f6-37158585fde7'), 
																				sTopic:= 'PackML/PlcStream1', eSourceType:= E_SourceType.eLive, eState:= E_DataSourceState.eUnknown ) ] ) ];
	
	//Reset
	
	//Virtual Inputs
	nV1_UnitModeCurrent: DINT;
	
	//HMI Structs
	stHMI_C1_Network: ST_HMI_C1_Network;
	
	//HMI Map Items
	aMapItems: ARRAY [0..0] OF ST_HMI_MapItem := [(sName:="eb302cb9-e487-ea1a-e3f6-37158585fde7", sDescription:="", sPosition:="", nStatus:= 0)];
END_VAR
VAR_GLOBAL CONSTANT
	nInstanceId: ULINT := 236878758780260194;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>